# CodiceFiscale

./: .directory  .travis.yml  CHANGELOG  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL  README  README.md  README.txt  build_androidArm.sh  build_mingw32  build_mingw64  codicefiscale-3.0.kdev4  codicefiscale-4.0.kdev4  fixqtlibspath.sh  removefile.sh  source.pro
.travis/: linux.install.sh  linux.win32.script.sh  linux.win64.script.sh
android/: .directory  AndroidManifest.xml.cmake  CMakeLists.txt  codicefiscale.jks  codicefiscale.keystore  configAndroid.json.cmake
cmake/modules/: .directory
cod_fisc/: .directory  .pref.cpp.un~  CMakeLists.txt  about.cpp  about.h  cod_fisc.cpp  cod_fisc.h  cod_fisc.pro  cod_fisc.qrc  codicefiscale.db  comuni.txt  find_cap_italian.cpp  find_cap_italian.h  lang.qrc  main.cpp  moc_settingsmanager.cpp_parameters  pref.cpp  pref.h  print.cpp  print.h  settingsmanager.h  verify_piva.cpp  verify_piva.h  versione.h  winicon.rc
cod_fisc/desktop/: codicefiscale.desktop
cod_fisc/images/: .directory  codicefiscale.icns
cod_fisc/language/: English.qm  English.ts  Italian.ts
cod_fisc/ui/: .directory  About.qml  BarButton.qml  Bottone.qml  Calendario.qml  FindCapItalian.qml  ImageClick.qml  Main.qml  Message.qml  Page1.qml  Page2.qml  PageMain1.qml  PageMain2.qml  RectMenu.qml  RectMessage.qml  TooltipButton.qml  VerifyCodicefiscale.qml  VerifyPiva.qml  about.ui  cod_fisc.ui  pref.ui  script.js  splash.qml  verify_codicefiscale.ui  verify_piva.ui
debian/: changelog  codicefiscale.install  control  dirs  rules
sql/: .directory  CMakeLists.txt  qmldir  sqldatabase.cbp  sqldatabase.cpp  sqldatabase.h  sqldatamodel.cpp  sqldatamodel.h  sqldb_plugin.cpp  sqldb_plugin.h
update/: .directory  CMakeLists.txt  main.cpp  main.qml  qrc_lang.cpp  qrc_update.cpp  settingsmanager.cpp  ui_update.h  update  update.cbp  update.cpp  update.h  update.pro  update.qrc  update.ui  winicon.rc
update/language/: English.qm  English.ts  Italian.ts
utils/: .directory  CMakeLists.txt  Mobile.cpp  Mobile.h  pref.cpp  pref.h  qmldir  saveimage.cpp  saveimage.h  settingsmanager.cpp  utils.cbp  utils_plugin.cpp  utils_plugin.h
